[package]
name = "taxotangolib"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "taxotango"
path = "src/bin/taxotango.rs"

[dependencies]
# burn = { version = "0.13.2", features = ["train"] }
burn = { git = "https://github.com/tracel-ai/burn", features = ["train", "wgpu"]}
log = "0.4.22"
env_logger = "0.11.5"
petgraph = { version = "0.6.5", features = ["rayon"] }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rayon = "1.10.0"
serde = { version = "1.0.206", features = ["derive"] }
indicatif = "0.17.8"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
mimalloc = "0.1.43"
zstd = { version = "0.13.2", features = ["zstdmt"] }
flexi_logger = "0.28.5"
# burn-wgpu = { git = "https://github.com/tracel-ai/burn/tree/main/crates/burn-wgpu", features = ["std"], no-default-features = true }

[profile.release]
# lto = true
# codegen-units = 1
# opt-level = 3
# debug = false
debug = true
# panic = "abort"
overflow-checks = true
